fixed sponsor logo spacing

--- a/css/eaf-style.css
+++ b/css/eaf-style.css
@@ -51,10 +51,11 @@ body {
 
 .title-box {
     padding-top: 0.75em;
-    font-size: 1.5em;
     width: 25%;
     float: left;
     text-align: center;
+    font-size: 1.5em;
+
 }
 
 .invert {
@@ -63,6 +64,7 @@ body {
     color: white;
     border-left: .2em solid #263c97;
     border-bottom: 0.2em solid #263c97;
+
 }
 
 .regular {
@@ -120,7 +122,7 @@ body {
 }
 
 #coke{
-    margin-bottom: 2em;
+    padding-bottom: 4em;
     padding-left: 2em;
 }
 
@@ -134,6 +136,7 @@ body {
 
 #futurizex{
     padding-right: 2em;
+    padding-top: 2em;
 }
 
 #papajohns{
@@ -142,6 +145,10 @@ body {
 
 #wellsfargo{
     padding-bottom: 2em;
+}
+
+#jerseymikes{
+    padding-top: 1.5em;
 }
 
 #sponsors{
